--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "prettier": "npx prettier . --check --write",
     "preview": "vite preview",
+    "generate-data": "curl https://dummyjson.com/products > app/lib/products.json",
     "test": "jest",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
+    "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,9 +34,9 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "isbot": "^4",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
+    "prettier": "3.5.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
